--- a/notebooks/model_analysis.ipynb
+++ b/notebooks/model_analysis.ipynb
@@ -12,10 +12,15 @@
     "import numpy as np\n",
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
     "\n",
     "from src.models.models import load_model\n",
     "from src.data.tf_data import TFDataCreator\n",
+    "from src.data.utils import get_split\n",
+    "from src.models.losses import dice_loss, dice_coefficient_hard\n",
     "\n",
+    "load_dotenv(find_dotenv())\n",
     "%matplotlib inline"
    ]
   },
@@ -25,7 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "task = \"Task04_Hippocampus\""
    ]
   },
   {
@@ -34,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = \"../models/Unet__split_0__20220905-223153\""
+    "model_path = \"../models/Unet__split_0__20220909-192811\""
    ]
   },
   {
@@ -52,15 +58,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = h5py.File(\"../data/processed/Task08_HepaticVessel_training.hdf5\", \"r\")\n",
-    "data_creator = TFDataCreator(file,\n",
-    "                             patch_size=(128, 128, 128),\n",
-    "                             shuffle=True,\n",
-    "                             params_augmentation={\n",
-    "                                 \"rotation\": False,\n",
-    "                                 \"random_center\": False,\n",
-    "                             })\n",
-    "ds = data_creator.get_tf_data(data_augmentation=False).batch(4)"
+    "split_id = 0\n",
+    "ids_train = get_split(split_id, os.environ[\"SPLITPATH\"])[\"training\"]\n",
+    "ids_val = get_split(split_id, os.environ[\"SPLITPATH\"])[\"validation\"]\n",
+    "ids_test = get_split(split_id, os.environ[\"SPLITPATH\"])[\"testing\"]"
    ]
   },
   {
@@ -69,7 +70,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = next(ds.as_numpy_iterator())"
+    "file = h5py.File(f\"../data/processed/{task}/{task}_training.hdf5\", \"r\")\n",
+    "data_creator = TFDataCreator.get(task.split(\"_\")[0])(\n",
+    "    file,\n",
+    "    #    patch_size=(128, 128, 128),\n",
+    "    shuffle=True,\n",
+    "    params_augmentation={\n",
+    "        \"rotation\": False,\n",
+    "        \"random_center\": False,\n",
+    "    })\n",
+    "ds = data_creator.get_tf_data_with_id(ids_test).batch(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y, image_id = next(ds.as_numpy_iterator())"
    ]
   },
   {
@@ -128,6 +147,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.imshow(y[b, :, :, s, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.summary()"
    ]
   },
@@ -138,6 +166,50 @@
    "outputs": [],
    "source": [
     "np.unique(y_pred[b, :, :, s, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = pd.DataFrame()\n",
+    "i = 0\n",
+    "for x, y, image_ids in ds:\n",
+    "    y_pred = model(x).numpy()\n",
+    "    dices_1 = dice_coefficient_hard(y[..., 1], y_pred[..., 1]).numpy()\n",
+    "    dices_2 = dice_coefficient_hard(y[..., 2], y_pred[..., 2]).numpy()\n",
+    "    for b in range(y.shape[0]):\n",
+    "        results = pd.concat([\n",
+    "            results,\n",
+    "            pd.DataFrame(\n",
+    "                {\n",
+    "                    \"dice_1\": dices_1[b],\n",
+    "                    \"dice_2\": dices_2[b]\n",
+    "                },\n",
+    "                index=[image_ids[b].numpy().decode(\"utf-8\")],\n",
+    "            )\n",
+    "        ])\n",
+    "        i += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
    ]
   },
   {
@@ -164,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
