--- a/notebooks/debug_sh_layer.ipynb
+++ b/notebooks/debug_sh_layer.ipynb
@@ -348,7 +348,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 ('env': virtualenv)",
+   "display_name": "Python 3.8.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -362,12 +362,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e1bcd3f1250924f6d57b9ce9f8a011716152354b24e26825996d84b9332aef6a"
+    "hash": "df0893f56f349688326838aaeea0de204df53a132722cbd565e54b24a8fec5f6"
    }
   }
  },
