--- a/notebooks/debug_layers.ipynb
+++ b/notebooks/debug_layers.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = SSHConv3D(1, 3, max_degree=5, padding=\"valid\", initializer=tf.keras.initializers.Constant(value=1.0),  project=False)"
+    "layer = SSHConv3D(2, 5, max_degree=5, padding=\"valid\", initializer=tf.keras.initializers.Constant(value=1.0),  project=False)"
    ]
   },
   {
@@ -188,6 +188,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "s.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s = np.max(np.real(output), axis=(0,1,2,3))\n",
     "for i in range(s.shape[-1]):\n",
     "    print(f\"{layer.indices[i]}: {s[i]}\")"
@@ -212,7 +221,7 @@
    "source": [
     "# f_ind = layer.indices_inverse[(1, 1,2)]\n",
     "# f_ind = layer.indices_inverse[(2, 3, 5)]\n",
-    "f_ind = 3\n",
+    "f_ind = 7\n",
     "fmap = output[0, :, :, :, f_ind]\n",
     "fmap_rotated = output_rotated[0, :, :, :, f_ind]\n",
     "fmap_unrotated = inv_rotate_3d(fmap_rotated, angle1, angle2, angle3)\n",
