ADD group convolution

--- a/notebooks/debug_layers.ipynb
+++ b/notebooks/debug_layers.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = SSHConv3D(2, 5, max_degree=5, padding=\"valid\", initializer=tf.keras.initializers.Constant(value=1.0),  project=False)"
+    "layer = BSHConv3D(2, 5, max_degree=3, padding=\"valid\", initializer=tf.keras.initializers.Constant(value=1.0),  project=False)"
    ]
   },
   {
