--- a/notebooks/debug_gconv_layer.ipynb
+++ b/notebooks/debug_gconv_layer.ipynb
@@ -16,10 +16,10 @@
     "from scipy import special as sp\n",
     "import SimpleITK as sitk\n",
     "\n",
-    "from src.models.cubenet.layers import GroupConv\n",
+    "from src.models.cubenet.layers import GroupConv \n",
     "from src.models.models import ResidualGLayer3D\n",
     "from src.models.utils import config_gpu\n",
-    "# from src.models.models import ResidualSLRILayer3D, ResidualBLRILayer3D\n",
+    "from src.models.models import GUnet, Unet\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -39,7 +39,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_gpu(\"0\", memory_limit=4)"
+    "config_gpu(\"0\", memory_limit=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential(layers=[\n",
+    "    tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-2)),\n",
+    "    GroupConv(\n",
+    "        5,\n",
+    "        kernel_size=(3, 3, 3),\n",
+    "        group=\"S4\",\n",
+    "        activation=\"relu\",\n",
+    "        use_bias=True,\n",
+    "        bias_initializer=tf.keras.initializers.Constant(0.1),\n",
+    "        share_weights=True,\n",
+    "    ),\n",
+    "    GroupConv(\n",
+    "        5,\n",
+    "        kernel_size=(3, 3, 3),\n",
+    "        group=\"S4\",\n",
+    "        activation=\"relu\",\n",
+    "        use_bias=True,\n",
+    "        bias_initializer=tf.keras.initializers.Constant(0.1),\n",
+    "        share_weights=True,\n",
+    "    ),\n",
+    "    tf.keras.layers.Lambda(lambda x: tf.reduce_max(x, axis=-1)),\n",
+    "])\n"
    ]
   },
   {
@@ -50,24 +80,16 @@
    "source": [
     "# layer = tf.keras.Sequential(layers=[\n",
     "#     tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-2)),\n",
-    "#     GroupConv(\n",
-    "#         5,\n",
-    "#         kernel_size=(3, 3, 3),\n",
-    "#         group=\"S4\",\n",
-    "#         activation=\"relu\",\n",
-    "#         use_bias=True,\n",
-    "#         bias_initializer=tf.keras.initializers.Constant(0.1),\n",
-    "#     ),\n",
-    "#     GroupConv(\n",
-    "#         5,\n",
-    "#         kernel_size=(3, 3, 3),\n",
-    "#         group=\"S4\",\n",
-    "#         activation=\"relu\",\n",
-    "#         use_bias=True,\n",
-    "#         bias_initializer=tf.keras.initializers.Constant(0.1),\n",
-    "#     ),\n",
+    "#     ResidualGLayer3D(8,\n",
+    "#                      3,\n",
+    "#                      group=\"S4\",\n",
+    "#                      activation=\"relu\",\n",
+    "#                      use_bias=True,\n",
+    "#                      use_batch_norm=True,\n",
+    "#                      bias_initializer=tf.keras.initializers.Constant(0.1)),\n",
     "#     tf.keras.layers.Lambda(lambda x: tf.reduce_max(x, axis=-1)),\n",
-    "# ])\n"
+    "# ])\n",
+    "# model = GUnet(1, n_features=[2, 4, 8, 16, 32])\n"
    ]
   },
   {
@@ -76,17 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = tf.keras.Sequential(layers=[\n",
-    "    tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-2)),\n",
-    "    ResidualGLayer3D(8,\n",
-    "                     3,\n",
-    "                     group=\"S4\",\n",
-    "                     activation=\"relu\",\n",
-    "                     use_bias=True,\n",
-    "                     use_batch_norm=True,\n",
-    "                     bias_initializer=tf.keras.initializers.Constant(0.1)),\n",
-    "    tf.keras.layers.Lambda(lambda x: tf.reduce_max(x, axis=-1)),\n",
-    "])\n"
+    "# model_standard = Unet(1, n_features=[2, 4, 8, 16, 32])"
    ]
   },
   {
@@ -129,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angle1, angle2, angle3 = 90, 90, 0\n",
+    "angle1, angle2, angle3 = 90, 90, 90\n",
     "axes = (2, 1)\n",
     "# image = np.random.uniform(size=(32, 32, 32))\n",
     "image_rotated = rotate_3d(image, angle1, angle2, angle3)\n"
@@ -157,8 +169,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = layer(image[np.newaxis, :, :, :, np.newaxis])\n",
-    "output_rotated = layer(image_rotated[np.newaxis, :, :, :, np.newaxis])"
+    "output = model(image[np.newaxis, :, :, :, np.newaxis])\n",
+    "output_rotated = model(image_rotated[np.newaxis, :, :, :, np.newaxis])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
    ]
   },
   {
@@ -176,28 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_output_diff(output):\n",
-    "    for k1 in range(output.shape[-1]):\n",
-    "        if np.sum(np.abs(output[...,k1]))==0:\n",
-    "            print(f\"map {layer.indices[k1]} is zero\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "output.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "check_output_diff(output)"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "source": [
     "# f_ind = layer.indices_inverse[(1, 1,2)]\n",
     "# f_ind = layer.indices_inverse[(2, 3, 5)]\n",
-    "f_ind = 4\n",
+    "f_ind = 0\n",
     "fmap = output[0, :, :, :, f_ind]\n",
     "fmap_rotated = output_rotated[0, :, :, :, f_ind]\n",
     "fmap_unrotated = inv_rotate_3d(fmap_rotated, angle1, angle2, angle3)\n",
