udpate form shark

--- a/notebooks/debug_layers.ipynb
+++ b/notebooks/debug_layers.ipynb
@@ -47,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = BSHConv3D(2, 5, max_degree=3, padding=\"valid\", initializer=tf.keras.initializers.Constant(value=1.0),  project=False)"
+    "layer = BSHConv3D(1, 3, max_degree=3, padding=\"valid\", kernel_initializer=tf.keras.initializers.Constant(value=1.0),  project=False)\n",
+    "# layer = BSHConv3D(1, 5, max_degree=3, padding=\"valid\", initializer=tf.keras.initializers.Constant(value=1.0),  project=False)"
    ]
   },
   {
@@ -118,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angle1, angle2, angle3 = 90, 90, 0\n",
+    "angle1, angle2, angle3 = 90, 90, 90\n",
     "axes = (2, 1)\n",
     "# image = np.random.uniform(size=(32, 32, 32))\n",
     "image_rotated = rotate_3d(image, angle1, angle2, angle3)\n"
@@ -188,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = np.max(np.real(output), axis=(0,1,2,3))\n",
+    "s = np.max(np.real(output), axis=(0, 1, 2, 3))\n",
     "for i in range(s.shape[-1]):\n",
     "    print(f\"{layer.indices[i]}: {s[i]}\")"
    ]
@@ -210,9 +211,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# f_ind = layer.indices_inverse[(1, 1,2)]\n",
+    "f_ind = layer.indices_inverse[(1, 1,2)]\n",
     "# f_ind = layer.indices_inverse[(2, 3, 5)]\n",
-    "f_ind = 7\n",
+    "# f_ind = 3\n",
     "fmap = output[0, :, :, :, f_ind]\n",
     "fmap_rotated = output_rotated[0, :, :, :, f_ind]\n",
     "fmap_unrotated = inv_rotate_3d(fmap_rotated, angle1, angle2, angle3)\n",
