--- a/notebooks/model_analysis.ipynb
+++ b/notebooks/model_analysis.ipynb
@@ -14,6 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from dotenv import find_dotenv, load_dotenv\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from src.models.models import load_model\n",
     "from src.data.tf_data import TFDataCreator\n",
@@ -31,7 +32,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "config_gpu(0, 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "task = \"Task04_Hippocampus\""
    ]
   },
@@ -41,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = \"../models/Unet__split_0__20221012-135856\""
+    "model_path = \"../models/S4Unet__ks_3__nf_4_8_16_32_64___split_0__20221018-172719\""
    ]
   },
   {
