--- a/notebooks/test_tf_train.ipynb
+++ b/notebooks/test_tf_train.ipynb
@@ -12,10 +12,12 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "\n",
     "from src.data.tf_data import TFDataCreator\n",
-    "from src.data.data_augmentation import preprocess_ct\n",
-    "from src.models.models import Unet, BLRIUnet\n",
+    "from src.data.data_augmentation import preprocess_ct, RightAngleRotation\n",
+    "from src.models.models import Unet\n",
+    "from src.models.utils import config_gpu\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -26,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "config_gpu(\"0\", 4)\n",
     "task = \"Task04_Hippocampus\""
    ]
   },
@@ -45,12 +47,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "image_ids = list(file.keys())\n",
+    "ds = tf.data.Dataset.from_tensor_slices(image_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_cut = ds.shuffle(buffer_size=32).batch(2) #.repeat().batch(2).take(130)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = list()\n",
+    "for i in ds_cut:\n",
+    "    for b in range(i.shape[0]):\n",
+    "        ids.append(i[b].numpy().decode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_ids = [i for i in image_ids if i not in ids]\n",
+    "len(missing_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data_creator = TFDataCreator.get(task.split(\"_\")[0])(file,\n",
+    "                                                    image_ids=[\"hippocampus_011\"],\n",
     "                                                     shuffle=True,\n",
     "                                                     params_augmentation={\n",
-    "                                                         \"rotation\": False,\n",
-    "                                                         \"random_center\":\n",
-    "                                                         False,\n",
+    "                                                         \"rotation\": True,\n",
+    "                                                         \"random_center\": False,\n",
     "                                                     })\n",
     "ds = data_creator.get_tf_data(data_augmentation=True)\n"
    ]
@@ -77,8 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = file[k][\"image\"][()]\n",
-    "label = file[k][\"label\"][()]\n",
+    "image = file[\"hippocampus_011\"][\"image\"][()]\n",
+    "label = file[\"hippocampus_011\"][\"label\"][()]\n",
     "image.shape"
    ]
   },
@@ -98,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yo = ds.batch(4).as_numpy_iterator()"
+    "yo = ds.batch(4).repeat().as_numpy_iterator()"
    ]
   },
   {
@@ -116,26 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.std(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "s = 32\n",
-    "b = 3\n",
+    "b = 0\n",
     "plt.subplot(1, 4, 1)\n",
     "plt.imshow(x[b, :, :, s, 0])\n",
     "plt.subplot(1, 4, 2)\n",
