--- a/notebooks/test_upsampling.ipynb
+++ b/notebooks/test_upsampling.ipynb
@@ -2,93 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import h5py\n",
+    "\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from scipy.ndimage import zoom\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from src.models.layers_faster import LinearUpsampling3D\n",
-    "from src.models.utils import config_gpu"
+    "from src.models.utils import config_gpu\n",
+    "from src.data.tf_data import TFDataCreator\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 Physical GPUs, 1 Logical GPUs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config_gpu(0, 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = np.random.uniform(size=(1, 16, 16, 16, 1))\n"
+    "datapath = \"/workspaces/3d_bispectrum_cnn/data/processed/Task04_Hippocampus/Task04_Hippocampus_training.hdf5\"\n",
+    "file = h5py.File(datapath, 'r')\n",
+    "tf_data_creator = TFDataCreator.get(\"Task04\")(\n",
+    "    file,\n",
+    "    num_parallel_calls=tf.data.AUTOTUNE,\n",
+    ")\n",
+    "ds = tf_data_creator.get_tf_data(data_augmentation=True).batch(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = LinearUpsampling3D(size=(2, 4, 6))"
+    "x, y = next(ds.as_numpy_iterator())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_utf = layer(image).numpy()"
+    "# layer = LinearUpsampling3D(size=(2, 2, 2))\n",
+    "layer = tf.keras.layers.UpSampling3D(size=(2, 2, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 32, 64, 96, 1)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "image_utf = layer(x).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "image_utf.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "image_zoom = np.zeros_like(image_utf)\n",
-    "for b in range(image.shape[0]):\n",
-    "    for c in range(image.shape[-1]):\n",
-    "        image_zoom[b, :,:,:,c] = zoom(image[b, ..., c], zoom=(2, 4, 6), order=1)"
+    "for b in range(x.shape[0]):\n",
+    "    for c in range(x.shape[-1]):\n",
+    "        image_zoom[b, :, :, :, c] = zoom(\n",
+    "            x[b, :, :, :, c],\n",
+    "            zoom=(2, 2, 2),\n",
+    "            order=1,\n",
+    "        )\n"
    ]
   },
   {
@@ -98,9 +104,64 @@
    "outputs": [],
    "source": [
     "plt.subplot(1, 3, 1)\n",
-    "plt.subplot(1, 3, 1)\n",
-    "plt.subplot(1, 3, 1)"
+    "plt.imshow(image_utf[0, :, :, 64, 0])\n",
+    "plt.subplot(1, 3, 2)\n",
+    "plt.imshow(image_zoom[0, :, :, 64, 0])\n",
+    "plt.subplot(1, 3, 3)\n",
+    "plt.imshow((image_utf - image_zoom)[0, :, :, 64, 0])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(image_utf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(image_zoom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.std(image_utf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.std(image_zoom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
