update from shark

--- a/notebooks/debug_layers.ipynb
+++ b/notebooks/debug_layers.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = BSHConv3D(1, 3, max_degree=3, padding=\"valid\", kernel_initializer=tf.keras.initializers.Constant(value=1.0),  project=False)\n",
+    "layer = SSHConv3D(1, 7, max_degree=3, padding=\"valid\", kernel_initializer=tf.keras.initializers.Constant(value=1.0),  project=False)\n",
     "# layer = BSHConv3D(1, 5, max_degree=3, padding=\"valid\", initializer=tf.keras.initializers.Constant(value=1.0),  project=False)"
    ]
   },
@@ -211,9 +211,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_ind = layer.indices_inverse[(1, 1,2)]\n",
+    "# f_ind = layer.indices_inverse[(1, 2,3)]\n",
     "# f_ind = layer.indices_inverse[(2, 3, 5)]\n",
-    "# f_ind = 3\n",
+    "f_ind = 3\n",
     "fmap = output[0, :, :, :, f_ind]\n",
     "fmap_rotated = output_rotated[0, :, :, :, f_ind]\n",
     "fmap_unrotated = inv_rotate_3d(fmap_rotated, angle1, angle2, angle3)\n",
@@ -276,15 +276,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer.indices[7]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.imshow(impulse_response[0, :, :, kernel_size // 2, 1])\n",
     "plt.colorbar()"
    ]
@@ -304,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yo = layer.conv_sh.filters.numpy()\n"
+    "atoms = layer.conv_sh.atoms.numpy()"
    ]
   },
   {
@@ -313,37 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yo.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = layer.conv_sh.ravel_sh_index(3, 0)\n",
-    "s = 1\n",
-    "plt.subplot(131)\n",
-    "plt.imshow(np.real(yo[:, :, s, 0, 0, i]))\n",
-    "plt.colorbar()\n",
-    "plt.subplot(132)\n",
-    "plt.imshow(np.real(yo[:, s, :, 0, 0, i]))\n",
-    "plt.colorbar()\n",
-    "plt.subplot(133)\n",
-    "plt.imshow(np.real(yo[s, :, :, 0, 0, i]))\n",
+    "plt.imshow(np.imag(atoms)[:,:,1,0, 1])\n",
     "plt.colorbar()"
    ]
   },
