--- a/notebooks/debug_gconv_layer.ipynb
+++ b/notebooks/debug_gconv_layer.ipynb
@@ -2,9 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-23 10:21:39.152583: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-11-23 10:21:39.173995: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-11-23 10:21:39.174013: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-11-23 10:21:39.174549: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-11-23 10:21:39.178011: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "/home/vscode/.local/lib/python3.11/site-packages/tensorflow_addons/utils/tfa_eol_msg.py:23: UserWarning: \n",
+      "\n",
+      "TensorFlow Addons (TFA) has ended development and introduction of new features.\n",
+      "TFA has entered a minimal maintenance and release mode until a planned end of life in May 2024.\n",
+      "Please modify downstream libraries to take dependencies from other repositories in our TensorFlow community (e.g. Keras, Keras-CV, and Keras-NLP). \n",
+      "\n",
+      "For more information see: https://github.com/tensorflow/addons/issues/2807 \n",
+      "\n",
+      "  warnings.warn(\n",
+      "/home/vscode/.local/lib/python3.11/site-packages/tensorflow_addons/utils/ensure_tf_install.py:53: UserWarning: Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.12.0 and strictly below 2.15.0 (nightly versions are not supported). \n",
+      " The versions of TensorFlow you are currently using is 2.15.0 and is not supported. \n",
+      "Some things might work, some things might not.\n",
+      "If you were to encounter a bug, do not file an issue.\n",
+      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
+      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
+      "https://github.com/tensorflow/addons\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from itertools import product\n",
@@ -26,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,18 +65,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_gpu(\"0\", memory_limit=16)"
+    "# config_gpu(\"0\", memory_limit=16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-23 10:21:44.375284: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-11-23 10:21:44.378939: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-11-23 10:21:44.379029: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-11-23 10:21:44.380042: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-11-23 10:21:44.380115: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-11-23 10:21:44.380171: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-11-23 10:21:44.438294: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-11-23 10:21:44.438441: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-11-23 10:21:44.438507: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-11-23 10:21:44.438561: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 7700 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3080, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.Sequential(layers=[\n",
     "    tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-2)),\n",
@@ -109,17 +156,17 @@
    "source": [
     "def rotate_3d(image, angle1, angle2, angle3):\n",
     "    image = np.squeeze(image)\n",
-    "    image = rotate(image, -angle1, axes=(0, 1), reshape=False)\n",
-    "    image = rotate(image, angle2, axes=(1, 2), reshape=False)\n",
-    "    image = rotate(image, -angle3, axes=(0, 1), reshape=False)\n",
+    "    image = rotate(image, -angle1, axes=(0, 1), reshape=False, prefilter=False)\n",
+    "    image = rotate(image, angle2, axes=(1, 2), reshape=False, prefilter=False)\n",
+    "    image = rotate(image, -angle3, axes=(0, 1), reshape=False, prefilter=False)\n",
     "    return image\n",
     "\n",
     "\n",
     "def inv_rotate_3d(image, angle1, angle2, angle3):\n",
     "    image = np.squeeze(image)\n",
-    "    image = rotate(image, angle3, axes=(0, 1), reshape=False)\n",
-    "    image = rotate(image, -angle2, axes=(1, 2), reshape=False)\n",
-    "    image = rotate(image, angle1, axes=(0, 1), reshape=False)\n",
+    "    image = rotate(image, angle3, axes=(0, 1), reshape=False, prefilter=False)\n",
+    "    image = rotate(image, -angle2, axes=(1, 2), reshape=False, prefilter=False)\n",
+    "    image = rotate(image, angle1, axes=(0, 1), reshape=False, prefilter=False)\n",
     "    return image"
    ]
   },
@@ -132,7 +179,8 @@
     "# image = np.transpose(sitk.GetArrayFromImage(image_sitk), (2, 1, 0))\n",
     "# image = image[60:92, 60:92, 70:102]\n",
     "image = np.random.rand(32, 32, 32)\n",
-    "plt.imshow(image[:, :, 15])"
+    "plt.imshow(image[:, :, 15])\n",
+    "plt.colorbar()"
    ]
   },
   {
@@ -141,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angle1, angle2, angle3 = 90, 90, 90\n",
+    "angle1, angle2, angle3 = 90, 0, 0\n",
     "axes = (2, 1)\n",
     "# image = np.random.uniform(size=(32, 32, 32))\n",
     "image_rotated = rotate_3d(image, angle1, angle2, angle3)\n"
@@ -222,6 +270,38 @@
     "fmap_rotated = output_rotated[0, :, :, :, f_ind]\n",
     "fmap_unrotated = inv_rotate_3d(fmap_rotated, angle1, angle2, angle3)\n",
     "# fmap_unrotated = rotate(fmap_rotated, -90, axes=(0, 1), reshape=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def psnr(x, y):\n",
+    "    x_shape = x.shape\n",
+    "    mse = (np.sum(np.abs(x - y)**2, axis=(1, 2, 3)) /\n",
+    "           (x_shape[1] * x_shape[1] * x_shape[1]))\n",
+    "    max_image = np.max(np.abs(x), axis=(1, 2, 3))\n",
+    "    return 10 * np.log10(max_image**2 / mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psnr(output, output_rotated)"
    ]
   },
   {
@@ -384,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0rc1"
   },
   "orig_nbformat": 4,
   "vscode": {
