--- a/notebooks/debug_groups.ipynb
+++ b/notebooks/debug_groups.ipynb
@@ -147,6 +147,20 @@
    "source": [
     "image = x[0, ..., :]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -165,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0rc1"
   },
   "orig_nbformat": 4,
   "vscode": {
