--- a/notebooks/debug_layers.ipynb
+++ b/notebooks/debug_layers.ipynb
@@ -47,8 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = SSHConv3D(1, 7, max_degree=3, padding=\"valid\", kernel_initializer=tf.keras.initializers.Constant(value=1.0),  project=False)\n",
-    "# layer = BSHConv3D(1, 5, max_degree=3, padding=\"valid\", initializer=tf.keras.initializers.Constant(value=1.0),  project=False)"
+    "# layer = SSHConv3D(1, 7, max_degree=3, padding=\"valid\", kernel_initializer=tf.keras.initializers.Constant(value=1.0),  project=False)\n",
+    "layer = BSHConv3D(1, 5, max_degree=3, padding=\"valid\", kernel_initializer=tf.keras.initializers.Constant(value=1.0),  project=False)"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer.indices[15]"
+    "layer.indices[3]"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angle1, angle2, angle3 = 90, 90, 90\n",
+    "angle1, angle2, angle3 = 90, 90, 0\n",
     "axes = (2, 1)\n",
     "# image = np.random.uniform(size=(32, 32, 32))\n",
     "image_rotated = rotate_3d(image, angle1, angle2, angle3)\n"
@@ -142,6 +142,38 @@
    "source": [
     "output = layer(image[np.newaxis, :, :, :, np.newaxis])\n",
     "output_rotated = layer(image_rotated[np.newaxis, :, :, :, np.newaxis])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def psnr(x, y):\n",
+    "    x_shape = x.shape\n",
+    "    mse = (np.sum(np.abs(x - y)**2, axis=(1, 2, 3)) /\n",
+    "           (x_shape[1] * x_shape[1] * x_shape[1]))\n",
+    "    max_image = np.max(np.abs(x), axis=(1, 2, 3))\n",
+    "    return 10 * np.log10(max_image**2 / mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output[0,:,:,:,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psnr(output, output_rotated)"
    ]
   },
   {
@@ -213,7 +245,7 @@
    "source": [
     "# f_ind = layer.indices_inverse[(1, 2,3)]\n",
     "# f_ind = layer.indices_inverse[(2, 3, 5)]\n",
-    "f_ind = 3\n",
+    "f_ind = 1\n",
     "fmap = output[0, :, :, :, f_ind]\n",
     "fmap_rotated = output_rotated[0, :, :, :, f_ind]\n",
     "fmap_unrotated = inv_rotate_3d(fmap_rotated, angle1, angle2, angle3)\n",
@@ -341,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
