--- a/notebooks/test_tf_train.ipynb
+++ b/notebooks/test_tf_train.ipynb
@@ -257,6 +257,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0rc1"
   },
   "orig_nbformat": 4,
   "vscode": {
